--- a/posts.html
+++ b/posts.html
@@ -6,6 +6,16 @@
     <body ng-app='app'>
         <div ng-controller='PostsCtrl' class='container'>
             <h1>Recent Posts</h1>
+            <form role='form'>
+                <div class="form-group">
+                    <div class="input-group">
+                        <input ng-model="postBody" class="form-control"/>
+                        <span class="input-group-btn">
+                            <button ng-click="addPost()" class="btn btn-default">Add Post</button>
+                        </span>
+                    </div>
+                </div>
+            </form>
             <ul class='list-group'>
                 <li ng-repeat='post in posts' class='list-group-item'>
                     <strong>@{{ post.username }}</strong>
@@ -19,6 +29,17 @@
         <script>
             var app = angular.module('app', []);
             app.controller('PostsCtrl', function($scope) {
+                
+                $scope.addPost = function(){
+                    if($scope.postBody){
+                        $scope.posts.unshift({
+                            username: 'new_guy',
+                            body: $scope.postBody
+                        });
+                        $scope.postBody = null;
+                    }
+                }
+                
                 $scope.posts = [
                     {
                         username: 'aaa',
